Updated and fixed formatting goofs in journal.html

--- a/journal.html
+++ b/journal.html
@@ -47,7 +47,7 @@
     The number of cylinders for this disk is set to 30436.  There is nothing wrong with that, <br />
     but this is larger than 1024, and could in certain setups cause problems with:<br />
     1) software that runs at boot time (e.g., old versions of LILO) <br />
-    2) booting and partitioning software from other OSs (e.g., DOD FDISK, OS/2 FDISK) </p><br />
+    2) booting and partitioning software from other OSs (e.g., DOD FDISK, OS/2 FDISK) </p>
   <p>In-program Command: p<br />
     Reply:<br />
 
@@ -81,8 +81,6 @@ Device:     Boot  StartCHS  EndCHS    StartLBA    EndLBA    Sectors   Size    Id
 /dev/mmcblk0p2    38,0,1    48,63,32  32           8191    22528     11.0M   83    Linux <br /><br />
 
 Partition table entries are not in disk order <br /><br />
-
-
 
 That can't be right..... <br />
 
@@ -276,7 +274,7 @@ The <strong>System Tools</strong> menu opens into a drop down menu with twelve o
   <li><em>Xkill</em> turns the cursor into a skull-and-crossbones.  Clicking the on the background in <br />
     this state does nothing and reverts to the regular cursor.  Clicking on an application in this state <br />
     closes it and reverts to the regular cursor.  Therefore, Xkill works as a force-stop tool.
-</ul><br /><br />
+</ul><br />
 
 The <strong>New Desktop</strong> option generates an extra desktop to work in, adding the Desktop and Sticky options <br />
   to the main menu if they are not already present.<br /><br />
@@ -305,10 +303,9 @@ revealed.</p>
 
 <p>Loaded Raspbian OS (Full) on a second SD card.</p><br />
 (Aside from the regular version of Raspbian, NOOBS Lite has Raspbian Full and Raspbian Mini, <br />
-  along with a whole bunch of other images to install.)</p><br /><br />
+  along with a whole bunch of other images to install.)</p><br />
 
 NOOBS for Raspberry Pi - <a href="https://www.raspberrypi.org/downloads/noobs/">https://www.raspberrypi.org/downloads/noobs/</a>
-
   
 <h3>21 February 2018 (Tiny Core)</h3>
   
@@ -338,7 +335,7 @@ Used command line to install apache2  [Apache HTTP Web Server] and its suggested
   
 <h3>28 February 2018 (Raspbian)</h3>
 
-<p>ToDo:</p><br />
+<p>ToDo:</p>
 <ul>
  <li> Set a static IP address on my Pi.
  <li> Install the Apache web server package.
@@ -353,7 +350,7 @@ server outside of this class, I won't do this. <br /><br />
 
 <a href="https://www.raspberrypi.org/documentation/configuration/security.md">https://www.raspberrypi.org/documentation/configuration/security.md</a><br />
 I read this documentation page on the Raspberry Pi website about securing the Pi, and knowing <br />
-that I'll be using apache2 for its web server properties, this will definitely come in handy.</p><br /><br />
+that I'll be using apache2 for its web server properties, this will definitely come in handy.</p><br />
   
 Added user wre and assigned a password to it (when prompted). <br />
 sudo adduser wre <br /><br />
@@ -472,6 +469,19 @@ This link helped with commands: <br />
 Removed Minecraft Pi edition and its related packages (and two Python packages related to <br />
 Minecraft Pi) because it will not open.  No use in having a program take up space if it will <br />
 not function. </p>
+
+<h3>18 Apr 2019 (Raspbian)</h3>
+
+<p>Today I learned a new UNIX command:<br /><br />
+
+sudo -i<br /><br />
+
+It allows you to put in your commands as the root user--you don't have to type 'sudo' before your commands.</p>
+
+<h3>25 Apr 2019 (Raspbian)</h3>
+
+<p>Updated portfolio to include my project from CMST 135 and lab reports from CMST 250 and <br />
+  CMST 315.</p>
 
 </body>
 </html>
