--- a/journal.html
+++ b/journal.html
@@ -494,5 +494,14 @@ It allows you to put in your commands as the root user--you don't have to type '
   installing the firewall and other security features courtesy of the page on Raspberry Pi <br />
   Documentation.</ p>
 
+<h3>May 2019 (Raspbian)</h3>
+
+<p>Last changes--added a couple more lab reports from 315.  We wired our Pi computers together<br />
+  one last time to check out each other's sites as the Professor looked at each of them and<br />
+  designated an online quiz as the final--here we would upload a zip file of our finished<br />
+  website and a file (this one) containing notes of what we learned.  <i>Overall, my primary <br />
+  takeaway from this studio course is that I feel a lot more confident about using Linux and <br />
+  command-line interface.</i></ p>
+
 </body>
 </html>
