--- a/aboutme.html
+++ b/aboutme.html
@@ -14,14 +14,15 @@
   <h1>Wesley Elliott - My Portfolio</h1>
   <hr /><br />
   <div id="return">
-    <a href="index.html">&lt;-- Return to Main Page</a>
+    <a href="index.html">Return to Main Page</a>
   </div>
   <br />
     <h2>About Me</h2>
-    <p>My name is Wesley Elliott and I am a computer systems student at Kansas State University Polytechnic.  I've had an interest in computer applications since elementary school, and since then I've always wanted to turn that interest into a career.  In particular, the programming aspect of computers has really caught my eye. I like to explore the possibilities and limitations of code, designing simple (and much less simple) applications and games.</p>
+    <p>I've had an interest in computer applications since elementary school, and since then I've always wanted to turn that interest into a career.  In particular, the programming aspect of computers has really caught my eye. I like to explore the possibilities and limitations of code, designing simple (and much less simple) applications and games.</p>
+    <p>As of May 2022, I am a graduate of Kansas State University Salina.  Bachelor of Science in Engineering - Computer Systems.</p>
   <footer>
     <br /><hr />
-    2018-2022 W. R. Elliott.
+    2018-2022 W. R. Elliott.  Powered by GitHub Pages.
   </footer>
 </body>
 </html>
