--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   </div>
   <footer>
     <hr />
-  2018-2022 W. R. Elliott - <a href="aboutme.html">About Me</a> - aquariuswre@ksu.edu
+  2018-2022 W. R. Elliott - <a href="aboutme.html">About Me</a> - aquariuswre@ksu.edu<br />
+    Powered by GitHub Pages.
   </footer>
     
   <!-- The script that randomly chooses out of a bank of quotes. -->
