--- a/whitepaper/desc.html
+++ b/whitepaper/desc.html
@@ -17,7 +17,7 @@
   <h1>Wesley Elliott - My Portfolio</h1>
   <hr /><br />
   <div id="return">
-    <a href="../index.html">&lt;-- Return to Main Page</a>
+    <a href="../index.html">Return to Main Page</a>
   </div>
   <br />
   <div id="floatleft">
@@ -55,7 +55,7 @@
   </div>
   <footer>
     <br /><hr />
-    2018-2022 W. R. Elliott.
+    2018-2022 W. R. Elliott.  Powered by GitHub Pages.
   </footer>
 </body>
 </html>
