--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <footer>
     <hr />
-  2018-2022 W. R. Elliott - <a href="aboutme.html">About Me</a> - aquariuswre@ksu.edu<br />
+  2018-2022 W. R. Elliott - <a href="aboutme.html">About Me</a> - aquariuswre@outlook.com<br />
     Powered by GitHub Pages.
   </footer>
     
