--- a/whitepaper/desc.html
+++ b/whitepaper/desc.html
@@ -55,7 +55,7 @@
   </div>
   <footer>
     <br /><hr />
-    2018-2022 W. R. Elliott.  Powered by GitHub Pages.
+    2018-2022 W. R. Elliott.
   </footer>
 </body>
 </html>
