--- a/labs/desc.html
+++ b/labs/desc.html
@@ -9,7 +9,7 @@
   <h1>Wesley Elliott - My Portfolio</h1>
   <hr /><br />
   <div id="return">
-    <a href="../index.html">&lt;-- Return to Main Page</a>
+    <a href="../index.html">Return to Main Page</a>
   </div>
   <br />
   <div id="floatleft">
