--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
     <p>As of May 2022, I am a graduate of Kansas State University Salina.  Bachelor of Science in Engineering - Computer Systems.</p>
   <footer>
     <br /><hr />
-    2018-2022 W. R. Elliott.  Powered by GitHub Pages.
+    2018-2022 W. R. Elliott.<br />Powered by GitHub Pages.
   </footer>
 </body>
 </html>
