--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="external.css">
-  <title>About Me | Wesley Elliott - My Portfolio</title>
+  <title>About Me | W. R. Elliott - My Portfolio</title>
   <style>
     p {
       text-align: center;
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h1>Wesley Elliott - My Portfolio</h1>
+  <h1>W. R. Elliott - My Portfolio</h1>
   <hr /><br />
   <div id="return">
     <a href="index.html">Return to Main Page</a>
@@ -20,6 +20,13 @@
     <h2>About Me</h2>
     <p>I've had an interest in computer applications since elementary school, and since then I've always wanted to turn that interest into a career.  In particular, the programming aspect of computers has really caught my eye. I like to explore the possibilities and limitations of code, designing simple (and much less simple) applications and games.</p>
     <p>As of May 2022, I am a graduate of Kansas State University Salina.  Bachelor of Science in Engineering - Computer Systems.</p>
+  <br /><hr /><br />
+    <h2>Privacy Policy</h2>
+	<p>I do not wish to show ads, collect your information, or stash cookies/trackers/creepy stuff in exchange for popularity or visibility in search engines, so I didn't include anything that would enable me to do so.  You're welcome.</p>
+	<p>GitHub Pages (the platform on which I am hosting this website) and GitHub themselves have their own policies; you can read them <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#data-collection">here</a> and <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement">here</a>.</p>
+  <br /><hr /><br />
+    <h2>Contact</h2>
+	<p>If you wish to leave some feedback, you may do so <a href="mailto:aquariuswre@outlook.com">here</a>.</p>
   <footer>
     <br /><hr />
     2018-2022 W. R. Elliott.<br />Powered by GitHub Pages.
