--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="external.css">
-  <title>Wesley Elliott - My Portfolio</title>
+  <title>W. R. Elliott - My Portfolio</title>
 </head>
 <body>
-  <h1>Wesley Elliott - My Portfolio</h1>
+  <h1>W. R. Elliott - My Portfolio</h1>
   <em><p id="headcapt">--------------------</p></em>
   <hr />
   <div id="links">
@@ -21,7 +21,7 @@
   </div>
   <footer>
     <hr />
-  2018-2022 W. R. Elliott - <a href="aboutme.html">About Me</a> - aquariuswre@outlook.com<br />
+	2018-2022 W. R. Elliott - <a href="aboutme.html">About, Privacy, Contact</a><br />
     Powered by GitHub Pages.
   </footer>
     
@@ -69,9 +69,11 @@
       "You can't fix what isn't broken",
       "I'm not a dumb terminal!",
       "Forever a work-in-progress",
-      "Friendship ended with DriveToWeb; now GitHub Pages is my best friend"];
-      // there are 42 quotes total
-    var rng = Math.floor(Math.random() * 42); // * number of quotes
+      "Friendship ended with DriveToWeb; now GitHub Pages is my best friend",
+	  "Dark Mode > Light Mode",
+	  "Be careful what you wish for; you just might get it"];
+      // there are 44 quotes total
+    var rng = Math.floor(Math.random() * 44); // * number of quotes
     headcapt.innerHTML = quotes[rng];
   </script>
 </body>
