--- a/speech/desc.html
+++ b/speech/desc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../external.css">
-  <title>Speech Web Collab | Wesley Elliott - My Portfolio</title>
+  <title>Speech Web Collab | W. R. Elliott - My Portfolio</title>
   <style>
     @media only screen and (max-width: 640px) {
       #shrink1 {
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <h1>Wesley Elliott - My Portfolio</h1>
+  <h1>W. R. Elliott - My Portfolio</h1>
   <hr /><br />
   <div id="return">
     <a href="../index.html">Return to Main Page</a>
