--- a/twist/desc.html
+++ b/twist/desc.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../external.css">
-  <title>TWIST Web Collab | Wesley Elliott - My Portfolio</title>
+  <title>TWIST Web Collab | W. R. Elliott - My Portfolio</title>
 </head>
 <body>
-  <h1>Wesley Elliott - My Portfolio</h1>
+  <h1>W. R. Elliott - My Portfolio</h1>
   <hr /><br />
   <div id="return">
     <a href="../index.html">Return to Main Page</a>
@@ -54,7 +54,7 @@
   <div id="floatright">
     <h3>WHERE TO FROM HERE?</h3>
       <p>The learning experience this exercise provided was a great help for our <a href="../speech/desc.html">Web Development Project</a>, which was exactly the same as this project with the exception of having a real client with real needs, and several months to complete the necessary tasks.  The experience from this project will also serve us in knowing what not to do when undertaking a project such as this.</p>
-    <h3><a href="https://twist-final-2019.herokuapp.com/">View It!</a></h3>
+    <h3><a href="https://github.com/elliottwesley/twist">View The Repository!</a></h3>
     <img src="twist_img1.png" width="455px" height="211px" alt="TWIST admin page"><br /><br />
     <img src="twist_img2.png" width="437px" height="184px" alt="TWIST add session page"><br />
     <img src="twist_img3.png" width="439px" height="537px" alt="TWIST room editor"><br />
