--- a/labs/desc.html
+++ b/labs/desc.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../external.css">
-  <title>Laboratory Reports | Wesley Elliott - My Portfolio</title>
+  <title>Laboratory Reports | W. R. Elliott - My Portfolio</title>
 </head>
 <body>
-  <h1>Wesley Elliott - My Portfolio</h1>
+  <h1>W. R. Elliott - My Portfolio</h1>
   <hr /><br />
   <div id="return">
     <a href="../index.html">Return to Main Page</a>
